# Video-Skill-Transcriber

./: .env.example  .gitignore  README.md  README_zh-CN.md  batch_list.json  install.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
skills/: VIDEO_SKILL.md
tools/: api_server.py  auth.py  batch_run.py  download.py  list.py  transcribe.py  update_skill.py  utils.py
