name = "video-skill-transcriber"
version = "0.1.0"
description = "Universal video downloader and transcriber agent skills (Bilibili, YouTube, & more)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
    "qrcode[pil]>=7.4.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.38.0",
    "torch>=2.0.0", 
    "torchaudio>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
