[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-skill-transcriber"
version = "0.2.1"
description = "Universal video downloader and transcriber agent skills (Bilibili, YouTube, & more)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "JackMeds", email = "jackmeds@users.noreply.github.com"}
]
dependencies = [
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
    "qrcode[pil]>=7.4.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.38.0",
    "torch>=2.0.0", 
    "torchaudio>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "python-multipart>=0.0.6",
    "google-generativeai>=0.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
